--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,8 +46,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--text-font-family);
+  background-color: var(--primary-background);
+  color: var(--primary-foreground);
 }
 
 a {
@@ -57,4 +58,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.hidden {
+  display: none !important;
 }
