--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -2,24 +2,36 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
+  width: 100vw;
   padding: 1.5rem 1rem;
   background-color: var(--primary-background);
 }
 
 .menuToggler {
-  font-size: 3rem;  
   background: none;
 	color: inherit;
 	border: none;
 	padding: 0;
 	font: inherit;
 	outline: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .menuToggler:focus {
   outline: none;
 }
 
-.menuIcon {
-  font-size: 2rem;
+.openIcon {
+  font-size: 1.75rem;
+  color: var(--header-color);
+}
+
+.mobileNavWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
 }
