--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@
   --width-sm: 640px;
   --width-md: 768px;
   --width-lg: 1024px;
+  --layout-width-desktop: 940px;
   --width-xl: 1280px;
   --width-2xl: 1536px;
 
