--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -2,18 +2,21 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  position: fixed;
   width: 100vw;
   padding: 1.5rem 1rem;
   background-color: var(--primary-background);
 }
-
+.headerWrapper {
+  background-color: var(--primary-background);
+  position: fixed;
+}
 .menuToggler {
   background: none;
 	color: inherit;
 	border: none;
 	padding: 0;
 	font: inherit;
+  cursor: pointer;
 	outline: inherit;
   display: flex;
   align-items: center;
@@ -34,4 +37,37 @@
   top: 0;
   left: 0;
   overflow: hidden;
+}
+
+.desktopMenu {
+  display: none;
+}
+
+@media screen and (min-width: 640px) {
+  .mobileMenu {
+    display: none;
+  }
+  .desktopMenu{ 
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 1.5rem 3rem;
+  } 
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    padding-left: 0;    
+    padding-right: 0;
+    width: var(--layout-width-desktop);
+    margin: auto;
+  }
+
+  .headerWrapper {
+    width: 100vw;
+    left: 0;
+  }
 }
