--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,7 +1,18 @@
-
+.layout {
+    margin-top: 6rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .layout {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  } 
+}
 @media screen and (min-width: 1024px) {
     .layout {
         width: var(--layout-width-desktop);
-        margin: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
