--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,8 @@ body {
   font-family: var(--text-font-family);
   background-color: var(--primary-background);
   color: var(--primary-foreground);
+  letter-spacing: 0.5px;
+  line-height: 1.5em;
 }
 
 a {
@@ -68,4 +70,35 @@ a {
 
 .absolute {
   position: absolute !important;
+}
+
+h1 {
+    font-family: var(--heading-font-family);
+    color: var(--heading-color);
+    font-size: var(--text-5xl);
+    letter-spacing: -1.5px;
+    font-weight: lighter;
+}
+
+h2 {
+    font-family: var(--heading-font-family);
+    font-size: var(--text-4xl);
+    letter-spacing: -0.5px;
+    font-weight: lighter;
+    color: var(--heading-color);
+}
+
+h3 {
+    font-family: var(--heading-font-family);
+    font-size: var(--text-3xl);
+    color: var(--heading-color);
+
+}
+
+h4 {
+    font-family: var(--heading-font-family);
+    font-size: var(--text-2xl);
+    color: var(--heading-color);
+    letter-spacing: 0.25px;
+    font-weight: normal;
 }
