--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,6 +42,7 @@
   --text-font-family: 'Roboto Slab', serif;
   --heading-font-family: 'Open Sans', sans-serif;
   --caption-font-family: 'Roboto', sans-serif;
+  --text-light: 300;
 }
 
 html,
@@ -52,7 +53,6 @@ body {
   background-color: var(--primary-background);
   color: var(--primary-foreground);
   letter-spacing: 0.5px;
-  line-height: 1.5em;
 }
 
 a {
@@ -77,22 +77,28 @@ h1 {
     color: var(--heading-color);
     font-size: var(--text-5xl);
     letter-spacing: -1.5px;
-    font-weight: lighter;
+    font-weight: var(--text-light);
+    margin-block-end: 0.75em;
+    margin-block-start: 1em;
 }
 
 h2 {
     font-family: var(--heading-font-family);
     font-size: var(--text-4xl);
     letter-spacing: -0.5px;
-    font-weight: lighter;
+    font-weight: var(--text-light);
     color: var(--heading-color);
+    margin-block-end: 0.75em;
+    margin-block-start: 1em;
 }
 
 h3 {
     font-family: var(--heading-font-family);
     font-size: var(--text-3xl);
     color: var(--heading-color);
-
+    font-weight: var(--text-light);
+    margin-block-end: 0.75em;
+    margin-block-start: 1em;
 }
 
 h4 {
@@ -100,5 +106,21 @@ h4 {
     font-size: var(--text-2xl);
     color: var(--heading-color);
     letter-spacing: 0.25px;
+    margin-block-end: 0.75em;
+    margin-block-start: 1em;
     font-weight: normal;
+}
+
+h5 {
+    font-family: var(--heading-font-family);
+    font-size: var(--text-xl);
+    color: var(--heading-color);
+    letter-spacing: 0px;
+    margin-block-end: 0.75em;
+    margin-block-start: 1em;
+    font-weight: normal;
+}
+
+ul {
+  margin: 0;  
 }
