--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,7 @@ body {
   background-color: var(--primary-background);
   color: var(--primary-foreground);
   letter-spacing: 0.5px;
+  overflow-x: hidden;
 }
 
 a {
