--- a/components/cv-nav/nav.module.css
+++ b/components/cv-nav/nav.module.css
@@ -1,7 +1,7 @@
 .cvnav {
     /* left 0 */
     margin-left: -1rem;
-    background-color: var(--primary-background);
+    background-color: var(--primary-background-inv);
     position: sticky;
     top: 0;
     width: 100vw;
@@ -10,6 +10,6 @@
 
 @media screen and (min-width: 768px) {
     .cvnav {
-        padding: 1.5rem 3rem;
+        /* padding: 1.5rem 3rem; */
     }
 }
