--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,8 +1,9 @@
 .layout {
     margin-top: 6rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    /* margin-left: 1rem;
+    margin-right: 1rem; */
 }
+/* 
 @media screen and (min-width: 768px) {
   .layout {
     margin-left: 3rem;
@@ -15,4 +16,4 @@
         margin-left: auto;
         margin-right: auto;
     }
-}
+} */
