--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -7,7 +7,7 @@
     color: var(--primary-foreground-inv);
     display: flex;
     align-items: center;
-    padding: 1rem 1rem;
+    padding: 1rem 0;
     position: relative;
     z-index: 0;
 }
@@ -82,14 +82,14 @@
 }
 
 .cvLayout {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    /* margin-left: 1rem;
+    margin-right: 1rem; */
 }
 
 @media screen and (min-width: 768px) {
     .cvLayout {
-        margin-left: 3rem;
-        margin-right: 3rem;
+        /* margin-left: 3rem;
+        margin-right: 3rem; */
     }
 }
 
@@ -98,9 +98,9 @@
         font-size: var(--text-5xl);
     }
     .cvLayout {
-        width: var(--layout-width-desktop);
+        /* width: var(--layout-width-desktop);
         margin-left: auto;
-        margin-right: auto;
+        margin-right: auto; */
     }
     .signboard {
         margin-top: 3.5rem;
