--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -48,7 +48,24 @@
     margin-block-start: 0em;
 }
 
+.layoutMargin, .layoutContent {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .layoutMargin, .layoutContent  {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  } 
+}
+
 @media screen and (min-width: 1024px) {
+    .layoutMargin {
+        width: var(--layout-width-desktop);
+        margin-left: auto;
+        margin-right: auto;
+    }
     .layoutContent {
         width: var(--width-sm);
         margin: auto;
