highlight current section in cv in desktop version

--- a/components/cv-desktop-nav/nav.module.css
+++ b/components/cv-desktop-nav/nav.module.css
@@ -24,6 +24,15 @@
   display: flex;
 }
 
+.navLink:hover {
+  color: var(--foreground-high);
+}
+
+.navLinkActive {
+  color: white;
+  background-color: var(--primary-accent);
+}
+
 @media screen and (min-width: 768px) {
   .desktopNav {
     display: flex;
